WebSocket commands redesign
