# src/main/java/com/oraskin/websocket/WebSocketCommandType.java
@@ -1,0 +1,8 @@
+package com.oraskin.websocket;
+
+public enum WebSocketCommandType {
+    PRESENCE,
+    MESSAGE,
+    TYPING_START,
+    TYPING_END
+}
